2004-04-03  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Correctly fix the text of *all* package-related errors.

2004-04-03  Elliott Hughes  <enh@acm.org>

	* src/diagnose.cpp, src/error.cpp: Fix +D so that it outputs the correct
	column numbers, instead of always reporting column 0 because we hadn't
	re-read the input to be able to translate token indexes into column
	numbers.

2004-04-02  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Fix a few package-related errors; packages should
	be reported as "java.lang", not "java/lang".

2004-03-31  Eric Blake  <ebb9@byu.net>

	* src/ast.cpp [JIKES_DEBUG]: Move stream.h include outside of the
	namespace.
	* src/depend.cpp: Formatting.
	(BoxedTypeForPrimitiveType, AddStringConversionDependence): Delete
	- with autoboxing in JSR 201, this information better belongs in
	TypeSymbol.
	* src/semantic.h: Ditto.
	* src/expr.cpp (ReportVariableNotFound): Use NULL, not 0, when we
	mean a pointer.
	(ProcessClassLiteral): Restore class dependence on non-primitive
	types, that Elliott's patch regressed on.
	(ProcessPLUS): Depend on the boxed type.
	(CreateAccessToScopedVariable, ProcessAmbiguousName): Don't allow
	static class to access constant instance variable of enclosing
	class, bug 3536.
	* src/symbol.h (BoxedType, UnboxedType): New methods.
	* src/symbol.cpp: Implement.

2004-03-31  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Fix a null-pointer access caused by trying to be too
	clever; all that effort I put into not crashing on valid source, and
	not a thought given to invalid source like "class C{C(){this.c=0;}}".

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: Compiling GNU Classpath from CVS and looking at Jikes'
	complaints was a good reminder that we shouldn't warn about hiding of
	the serialVersionUID field; that's the way it's supposed to be used.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/init.cpp: Warn about non-static final fields initialized by a